--- a/jupyterhub-openshift/rbac.yaml
+++ b/jupyterhub-openshift/rbac.yaml
@@ -27,6 +27,11 @@ roleRef:
   name: jupyterhub-scc-privileged
   apiGroup: rbac.authorization.k8s.io
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: jupyterhub-spark
+---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
