--- a/jupyterhub-openshift/resources/service-account-oauth.yaml
+++ b/jupyterhub-openshift/resources/service-account-oauth.yaml
@@ -5,5 +5,13 @@ metadata:
     serviceaccounts.openshift.io/oauth-redirectreference.first: "{\"kind\":\"OAuthRedirectReference\",\"apiVersion\":\"v1\",\"reference\":{\"kind\":\"Route\",\"name\":\"jupyterhub\"}}"
     #serviceaccounts.openshift.io/oauth-redirectreference.first: "{\"kind\":\"OAuthRedirectReference\",\"apiVersion\":\"v1\",\"reference\":{\"kind\":\"Route\",\"name\":\"${APPLICATION_NAME}\"}}"
     serviceaccounts.openshift.io/oauth-redirecturi.first: "hub/oauth_callback"
-    serviceaccounts.openshift.io/oauth-want-challenges: "false"
+    # serviceaccounts.openshift.io/oauth-want-challenges: "false"
   name: jupyterhub-oauth
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: jupyterhub-oauth
+  annotations:
+    kubernetes.io/service-account.name: "jupyterhub-oauth" 
+type: kubernetes.io/service-account-token 
