--- a/jupyterhub-openshift/resources/notebook-build.yaml
+++ b/jupyterhub-openshift/resources/notebook-build.yaml
@@ -35,6 +35,7 @@ spec:
       # to be compatible with py-spark 
       # jupyter notebook image https://hub.docker.com/r/apache/spark-py 
       RUN conda install python=3.9
+      RUN python -m pip install mysql-connector-python 
       USER 1000
   strategy:
     type: Docker
